active state issue fix on firefox

--- a/src/ReactCoolScrollbar/scroller-style.scss
+++ b/src/ReactCoolScrollbar/scroller-style.scss
@@ -30,7 +30,7 @@
   height: 100%;
   right: 4px;
   overflow: hidden;
-  &:not(:active) {
+  &:not(.active) {
     opacity: 0;
   }
   .cool-scrollbar-track {
@@ -51,7 +51,9 @@
     &:hover {
       background-color: #858585;
     }
-    &:active {
+  }
+  &.active {
+    .cool-scrollbar-thumb {
       background-color: #727272;
     }
   }
